# Regen-v1

./: .env.realtime.example  .eslintignore  .eslintrc.rules.js  .gitignore  .lighthouserc.js  .prettierignore  .releaserc.json  AI_NATIVE_VISION.md  AI_SIDEBAR_COMPLETE.md  ALL_COMPONENTS_COMPLETE.md  ALL_ENHANCEMENTS_COMPLETE.md  ALL_TESTS_FIXED.md  ALL_TESTS_STATUS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CHECKLIST_STATUS.md  CI_DEBUG_INFO.md  CI_FIXES.md  CI_FIXES_APPLIED.md  CLEANUP_SUMMARY.md  COMPLETE_FEATURE_LIST.md  COMPLETION_SUMMARY.md  CONSENT_LEDGER.md  CONTRIBUTING.md  CRITICAL_FIXES_IMPLEMENTED.md  Check_repo.js  DEPLOYMENT_AND_TESTING_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEVELOPERS.md  DEV_SERVER_FIXES.md  DEV_SERVER_STATUS.md  DOCS_CLEANUP_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DUCKDUCKGO_SEARCH_FIX.md  Dockerfile.worker  ELECTRON_VITE_SETUP.md  FINAL_FOLDER_STRUCTURE.md  (+141 more)
.github/: ISSUES.md  ISSUES_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  branch-protection.js
.husky/: pre-commit  pre-push
.storybook/: main.ts  preview.ts
architecture/: .gitkeep  FIXES_APPLIED.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  README.md  fix-services.js  index.js  run-all-tests.js  verify-integration.js
backend/: README.md  docker-compose.yml  package.json
config/: README.md  example.env  playwright.visual.config.ts  requirements-worker.txt  tsconfig.base.json  tsconfig.json  tsconfig.renderer.json  tsconfig.server.json  vitest.config.ts  vitest.setup.ts  vpn-profiles.json
core/: automation.ts  browserSubsystem.ts  devDebugView.ts  memoryPrivacy.ts  permissions.ts  personalMemory.ts  runtime.ts  systemAgent.ts  systemState.ts  voiceControl.ts
dist-web/: index.html  sw.js
docker/: Dockerfile.onprem  Dockerfile.server  README.md  docker-compose.yml
docs/: 15_DAY_SPRINT_PLAN.md  ACCOMPLISHMENTS_SUMMARY.md  AI_AGENT_FIXES.md  AI_BRIDGE_GUIDE.md  ALL_FIXES_COMPLETE.md  API_CONFIG.md  API_INTEGRATION_STATUS.md  API_KEYS.md  ARCHITECTURE.md  AUDIT_FIXES_COMPLETE.md  AUDIT_FIXES_IMPLEMENTATION.md  AUDIT_FIXES_SUMMARY.md  BACKEND_INFRASTRUCTURE.md  BACKEND_REALTIME_FIXES.md  BATTLE_PLAN_STATUS.md  BETA_ISSUES.md  BETA_LAUNCH_CHECKLIST.md  BETA_RECRUITMENT_MATERIALS.md  BETA_USER_GUIDE.md  BUILD_WINDOWS_INSTALLER.md  CATEGORY_B_FIXES.md  CATEGORY_C_FIXES.md  CHECKPOINT_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  CODE_IMPROVEMENTS_V0.4.md  COMPETITIVE_ANALYSIS.md  COMPETITOR_BATTLE_MAP.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPLETE_INTEGRATION_STATUS.md  COMPLETION_VERIFICATION.md  COMPREHENSIVE_UI_UX_TEST.md  CRASH_RECOVERY_UI.md  CRASH_REPORTING_SETUP.md  CRITICAL_FIXES_SUMMARY.md  CURRENT_LAG_STATUS.md  CURSOR_BUILD_PROMPTS.md  DAILY_LOG.md  DESI_POLISH_COMPLETE.md  DESI_POLISH_WHISPER_INTEGRATION.md  DETERMINISM_IMPLEMENTATION.md  (+166 more)
electron/: config.ts  main.cjs  main.ts  menu.ts  preload.cjs  preload.ts  security.ts  types.ts
examples/: integration-examples.ts
extension/: README.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js
extensions/: README.md  extension-manifest.schema.json  manifest.schema.json
launch/: .gitignore  DEPLOY.md  README.md  config.json
legal/: PRIVACY.md  README.md  TERMS_OF_SERVICE.md
load-test/: jio-3g-matrix.md  k6-sse.js  k6-summarize.js
locales/: en.json  hi.json
memory/: README.md
migrations/: 0001_init_frontier.sql
models/: README.md
omnibrowser-redix-memory-kit/: README.md  docker-compose.yml  examples.http
perf/: latest-1765223354955.json
playwright-report/: index.html
project-docs/: ALL_COMPLETE.md  ALL_DONE.md  CHANGELOG.md  CI_FIXES.md  COMPLETE.md  COMPLETE_SUMMARY.md  FEATURE_FREEZE.md  FINAL_COMPLETE.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  PRODUCTION_READINESS.md  PRODUCTION_STATUS.md  README.md  REALITY_VERIFICATION.md  ROADMAP.md  TESTING_PLAN.md  TEST_IMPLEMENTATION_COMPLETE.md  V1_GA_CRITERIA.md  VISION.md  WINNING_PLAN.md
public/: hologram.html  index.html  landing.html  privacy.html  security.html  sw.js
redix-core/: .gitignore  QUICKSTART.md  README.md  docker-compose.yml  main.py  requirements.txt  test_main.py
redix-core/runtime/: .gitignore  Cargo.toml  README.md  package.json
redix-core/runtime/src/: lib.rs
scripts/: README.md  analyze-bundle.js  backend-server.ts  benchmark-latency.cjs  benchmark-memory.cjs  benchmark-performance.cjs  build-android.md  build-installer-with-ollama.js  build-lunr.js  build-production.cjs  build-windows-installer.js  check-api-config.js  check-release-readiness.cjs  ci-validate.js  clean-cache.js  diagnose-research-mode.cjs  download_and_convert_hf.sh  ensure-single-react.js  generate-changelog.js  generate-visual-snapshots.js  installer.nsi  kill-dev-processes.js  lighthouse-audit.ts  load-test-socket.js  migrate-cursor-to-frontier.py  performance-benchmark.cjs  playwright-snapshots.md  postinstall.ts  profile-performance.ps1  quantize_gguf.sh  release-test-checklist.md  release-test.ps1  repo_audit.sh  run-all-benchmarks.cjs  run-all-tests.js  run-demo.js  run-demo.ps1  run-demo.sh  run-tests.js  runtime-test.js  (+45 more)
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  ai.rs  browser.rs  commands.rs  db.rs  handlers.rs  ipc.rs  lib.rs  main.rs  privacy.rs  search.rs  stability.rs  state.rs  tor.rs
src-tauri/src/services/: global_shortcut_service.rs  ollama_service.rs
tauri-migration/src-tauri/: Cargo.toml  capabilities.json  installer.nsi  tauri.conf.json  tauri.conf.json.secure
tauri-migration/src-tauri/icons/: icon.icns
tauri-migration/src-tauri/src/: adblock.rs  agent.rs  browser.rs  bus_bridge.rs  cef_host.rs  chunker.rs  db.rs  grammar.rs  llama-server.rs  llama.rs  main.rs  ollama.rs  page_extractor.rs  phase2_commands.rs  security.rs  websocket.rs
tauri-migration/src-tauri/src/api/: execute.rs  extract.rs  mod.rs
(+2510 files in other folders)
