[package]
name = "omnibrowser-tauri"
version = "0.1.0"
description = "Omnibrowser - Tauri Desktop App"
authors = ["Omnibrowser Team"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-shell = "2"

[target."cfg(windows)".dependencies]
tauri-plugin-single-instance = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "omnibrowser-tauri"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
