[package]
name = "omnibrowser-tauri"
version = "0.1.0"
description = "Omnibrowser - Tauri Desktop App"
authors = ["Omnibrowser Team"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-shell = { version = "2", features = [] }
tauri-plugin-global-shortcut = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
which = "5"
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
num_cpus = "1.16"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi"] }
tauri-plugin-single-instance = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }

[[bin]]
name = "omnibrowser-tauri"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
