[package]
name = "redix-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Regen"]
description = "Redix hot/cold memory runtime compiled to WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
panic = "abort"
strip = true

