[package]
name = "regen-tauri"
version = "0.1.0"
description = "Regen - Tauri Desktop App"
authors = ["Regen Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.5.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
urlencoding = "2.1"
tauri-plugin-global-shortcut = "2.0"
sysinfo = "0.31"  # For process management and memory monitoring
dotenv = "0.15"  # For loading .env file
chrono = "0.4"  # For date handling
rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite for local storage
uuid = { version = "1.0", features = ["v4", "serde"] }  # For generating IDs
md5 = "0.7"  # For HTML hashing
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }  # WebSocket server
futures = "0.3"  # For async streams
# playwright = { version = "0.20", features = ["api"] }  # Commented out - requires Node.js runtime
# base64 = "0.22"  # Not needed without Playwright screenshots

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

